kotlin/semlang-parser/src/test/semlang/validatorTests/fail/dataType1.sem
// Data.equals requires the parameter type passed in to be of type class Data
function dataEqualsWrapper<T>(left: T, right: T): Boolean {
  // Named function call
  Data.equals<T>(left, right)
}
